--- a/report.ipynb
+++ b/report.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "63074b97",
+   "metadata": {},
+   "source": [
+    "## I've looked at the images at start\n",
+    "\n",
+    "I thought that resizing them can corrupt the dataset and I thought about cropping them instead but they look fine\n",
+    "after resizing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "44e5b78f",
@@ -4514,7 +4525,7 @@
    "id": "9df3ca76",
    "metadata": {},
    "source": [
-    "### Looking at some of the images that have bad ratio"
+    "### Looking at some of the images that have bad ratio in resized version"
    ]
   },
   {
@@ -4743,9 +4754,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f02bafcf",
+   "metadata": {},
+   "source": [
+    "# Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a925ce",
+   "metadata": {},
+   "source": [
+    "I've started with images in RGB (greyscale -> network -> RGB image), but the images seemed low resolution and had some glitches\n",
+    "The code is in rgb directory\n",
+    "\n",
+    "I've used MSE loss as it seems the most natural there (it's regression task)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c75d3447",
+   "metadata": {},
+   "source": [
+    "### Example images here (10 images from every epoch)\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-111/all?path=&attribute=generated_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "345344db",
+   "metadata": {},
+   "source": [
+    "### Another approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfba1275",
+   "metadata": {},
+   "source": [
+    "Then I took a look at the paper: http://richzhang.github.io/colorization/\n",
+    "and realised that by using RGB format we can't use input grayscale image in generating the result image, which may make the objects lose \"shape\" (and therfore reduce resolution)\n",
+    "So I've implemented a little different model that uses LAB format (it has grayscale as first channel and colors are encoded in second and third channel). Our model looks like that:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f01e799",
+   "metadata": {},
+   "source": [
+    "RGB -> LAB\n",
+    "\n",
+    "LAB -> (grayscale, colors)\n",
+    "\n",
+    "grayscale -> NETWORK -> colors\n",
+    "\n",
+    "final image = grayscale + colors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ae648d5",
+   "metadata": {},
+   "source": [
+    "### Example images here (10 images from every epoch)\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-118/all?path=&attribute=generated_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b16a83",
+   "metadata": {},
+   "source": [
+    "### Model imprevements\n",
+    "I've added few covolutions and deconvolutions(instead of upsampling) to make the model better + I've loaded more complicated resnet model (more classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaaf56cf",
+   "metadata": {},
+   "source": [
+    "### Different loss + brighter colors\n",
+    "As the network doesn't know anything about the colors, and some objects can have very intense, but diverse colors (like a dress can have intense red/intense blue color), guessing one of the extreme colors can be risky and the model learns to make the colors very \"grayish\"\n",
+    "\n",
+    "I've decided to improve the loss a little and added value that punishes the network if the colors aren't too intense (this is modified by \"alpha\" parameter and \"loss_type\"\n",
+    "\n",
+    "I've tried two ways for the loss. One is simply punishing the network if the colors are not extreme\n",
+    "\n",
+    "`return (-y_pred**2).mean()`\n",
+    "\n",
+    "The other is punishing the network if the ground truth color was extreme, but our network guessed the \"safe\" color (but the loss ignores in what way the color was extreme)\n",
+    "\n",
+    "`return ((abs(y_pred) - abs(y))**2).mean()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b693ddd2",
+   "metadata": {},
+   "source": [
+    "This approach made the colors a little brighter and more vibrant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cfdd5a2",
+   "metadata": {},
+   "source": [
+    "### Example images here, first loss (10 images from every epoch)\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-115/all?path=&attribute=generated_image\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-108/all?path=&attribute=generated_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54e494dd",
+   "metadata": {},
+   "source": [
+    "### Example images here, second loss (10 images from every epoch)\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-117/all?path=&attribute=generated_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5d3947b",
+   "metadata": {},
+   "source": [
+    "Or with higher alpha and thus brighter colors:\n",
+    "https://app.neptune.ai/rm360179/image-coloring/e/IM-108/all?path=&attribute=generated_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c61fc1ec",
+   "metadata": {},
+   "source": [
+    "The code is available at:\n",
+    "\n",
+    "https://github.com/ravmi/image-colorization\n",
+    "\n",
+    "And the experiment results at:\n",
+    "\n",
+    "https://app.neptune.ai/rm360179/image-coloring"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "504525f2",
+   "id": "0550de02",
    "metadata": {},
    "outputs": [],
    "source": []
